- show popups on keypress
